# Projet_Spe_EyePliance

./: CMakeLists.txt  README.md  speech-rec.sh
bd/: README.md
commands/: commands_Linux.txt  commands_OSX.txt
src/: CMakeLists.txt  Eye.cpp  Eye.hpp  Face.cpp  Face.hpp  Filtre.cpp  Filtre.hpp  Pupil.cpp  Pupil.hpp  main.cpp
